--- a/home/package.json
+++ b/home/package.json
@@ -23,7 +23,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "node-mailjet": "^6.0.11",
     "pg": "^8.16.3",
     "redis": "^5.8.3",
     "winston": "^3.18.3",
